fix: remove max height for book content on mobile

--- a/src/components/BookDetail/BookDetail.module.sass
+++ b/src/components/BookDetail/BookDetail.module.sass
@@ -122,7 +122,7 @@
 
   @media (max-width: 768px)
     max-width: 100%
-    max-height: 360px
+    max-height: unset
     padding-right: 0
     order: 3
 
